# libcgls

./: .gitignore  Makefile.am  atomic-test.scm  atomic-test2.scm  atomic-test3.scm  cam:sponza1.scm  configure.ac  default.c.scm  default.scm  default.shader  depth-array-oit-cc.scm  depth-array-oit.scm  depth-linked-oit-tsm.scm  depth-linked-oit.scm  depth-ll.shader  depth-tsm.shader  dp.scm  libcgls.pc.in  perf:sponza1.scm  poster.scm  poster.shader  run  scene:sponza+stanford.scm  sceneloader.scm  std.scm  tess.scm  tess.shader  tsm.scm  tsm.shader
doc/: doxyfile.in  doxygen_mainpage.h.in  list-lengths
src/: Makefile.am  animation.c  animation.h  basename.h  c-utils.c  c-utils.h  camera-animation.c  camera-animation.h  cgls.c  cgls.h  cmdline.cpp  cmdline.h  command-animation.c  command-animation.h  console.cpp.in  console.h  drawelement.c  drawelement.h  gen-gbuffer-shaders.c.in  gen-gbuffer-shaders.h  gen-vertex-shaders.c.in  gen-vertex-shaders.h  interaction.c  interaction.h  light.c  light.h  main.c  main.cpp  material.c  material.h  modelloader-scm.c  modelloader.cpp  modelloader.h  objloader.c  objloader.h  path.c  path.h  perf-main.cpp  perf.c  perf.h  (+15 more)
